@@ -1,3 +1,8 @@
+2003-10-29  OHASHI Akira  <bg66@koka-in.org>
+
+	* w3m.el (w3m-process-connection-type): Set t when system is
+	darwin version 7.0.0 or later.
+
 2003-10-28  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m.el (w3m-fontify-strike-through (var)): Make it into the
